--- a/404.html
+++ b/404.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; URL=/" />
+    <title>Redirecting...</title>
   </head>
-  <body></body>
+  <body>
+    <p>Redirection en cours...</p>
+  </body>
 </html>
+
